# aws-lambda-rust

./: README.md
add-url/: Cargo.toml  Makefile
add-url/src/: main.rs
divide-by-two/: Cargo.toml  Makefile
divide-by-two/src/: main.rs
marco-polo-lambda/: Cargo.toml  Makefile
marco-polo-lambda/src/: main.rs
new-lambda-project/: Cargo.toml
polars-lambda/: Cargo.toml  Makefile
polars-lambda-axum/: Cargo.toml
polars-lambda-axum/src/: lib.rs  main.rs
polars-lambda/src/: lib.rs  main.rs
rust-add/: Cargo.toml  Makefile
rust-add/src/: main.rs
