[package]
name = "polars-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.68"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
polars = { version = "0.32.1", features = ["lazy"] }
